--- a/index.html
+++ b/index.html
@@ -187,19 +187,21 @@
                 <h4 class="text-center pt-3">Contact</h4>
             </div>
         </div>
-        <div class="row justify-content-center">
-            <div class="col-md-8">
-                <div class="mb-3">
-                    <label for="exampleFormControlInput1" class="form-label">Nama</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" name="email">
+        <form action="https://formspree.io/f/xqkvqdyb" method="post">
+            <div class="row justify-content-center">
+                <div class="col-md-8">
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label">Nama</label>
+                        <input type="text" class="form-control" id="exampleFormControlInput1" name="nama">
+                    </div>
+                    <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <input class="btn btn-dark" type="submit" value="Kirim">
                 </div>
-                <div class="mb-3">
-                    <label for="exampleFormControlTextarea1" class="form-label">Pesan</label>
-                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                </div>
-                <input class="btn btn-dark" type="submit" value="Kirim">
             </div>
-        </div>
+        </form>
     </div>
 </section>
 
